code changes for question crtl with timeout function

--- a/app/html/question.html
+++ b/app/html/question.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <p>Hi {{UserName}} Welcome To The Online Examination Portal</p>
+<p>Time In sdeconds {{timeInmillisecond}}</p>
 <form name="myForm">
 
     <p>Question:<br>
